--- a/clerk/package.json
+++ b/clerk/package.json
@@ -11,21 +11,14 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.3.4",
     "@expo/metro-runtime": "~4.0.0",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-firebase/app": "^21.4.1",
-    "@react-native-firebase/firestore": "^21.4.1",
     "expo": "~52.0.7",
-    "expo-dev-client": "~5.0.1",
-    "expo-image-picker": "~16.0.2",
     "expo-router": "^4.0.5",
     "expo-secure-store": "^14.0.0",
     "expo-status-bar": "~2.0.0",
-    "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-web": "~0.19.13",
-    "expo-file-system": "~18.0.4"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
